# jp-theme-tracker

./: .env.example  .gitignore  Dockerfile  README.md  render.yaml  start-all.bat  start-backend.bat  start-frontend.bat  stop-all.bat
backend/: main.py  middleware.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/app/: cache.py  config.py  websocket_manager.py
backend/data/: __init__.py  themes.py
backend/jobs/: __init__.py  update_data.py
backend/precomputed/: theme_5g-telecom_10d.json  theme_5g-telecom_1d.json  theme_5g-telecom_1mo.json  theme_5g-telecom_1y.json  theme_5g-telecom_3mo.json  theme_5g-telecom_5d.json  theme_5g-telecom_6mo.json  theme_ai_10d.json  theme_ai_1d.json  theme_ai_1mo.json  theme_ai_1y.json  theme_ai_3mo.json  theme_ai_5d.json  theme_ai_6mo.json  theme_chemicals_10d.json  theme_chemicals_1d.json  theme_chemicals_1mo.json  theme_chemicals_1y.json  theme_chemicals_3mo.json  theme_chemicals_5d.json  theme_chemicals_6mo.json  theme_construction_10d.json  theme_construction_1d.json  theme_construction_1mo.json  theme_construction_1y.json  theme_construction_3mo.json  theme_construction_5d.json  theme_construction_6mo.json  theme_defense-space_10d.json  theme_defense-space_1d.json  theme_defense-space_1mo.json  theme_defense-space_1y.json  theme_defense-space_3mo.json  theme_defense-space_5d.json  theme_defense-space_6mo.json  theme_dx_10d.json  theme_dx_1d.json  theme_dx_1mo.json  theme_dx_1y.json  theme_dx_3mo.json  (+107 more)
backend/routers/: __init__.py  analytics.py  auth.py  export.py  health.py  search.py  stocks.py  themes.py
(+169 files in other folders)
