[project]
name = "jp-theme-tracker-backend"
version = "2.0.0"
description = "Japanese stock theme tracker API backend"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["routers", "services", "data", "jobs", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
